[package]
name = "reload_config"
version = "0.1.5"
authors = ["Taylan Dogan <git@taylandogan.info>"]
edition = "2018"
description = "A small library for hot reloading configuration files without restarting the process."
license = "MIT"
repository = "https://github.com/kondanta/reload_config"
readme = "README.md"
keywords = ["reload", "config"]
categories = ["filesystem"]
homepage = "https://github.com/kondanta/reload_config"
documentation = "https://docs.rs/reload_config"

[dependencies]
tracing = "0.1"
crossbeam-channel = "0.5"
anyhow = "1"
notify = "5.0.0-pre.12"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[profile.release]
opt-level = 3       # Optimize binary speed{preffered}. z for binary size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
